crates/ssa-cache-schema/tests/ui/fail_missing_bound.stderr
error[E0277]: the trait bound `NoSchema: CacheSchema` is not satisfied
  --> tests/ui/fail_missing_bound.rs:11:34
   |
11 |     let _ = schema_fingerprint::<Wrapper<NoSchema>>();
   |                                  ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CacheSchema` is not implemented for `NoSchema`
  --> tests/ui/fail_missing_bound.rs:3:1
   |
 3 | struct NoSchema;
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `CacheSchema`:
             &T
             &mut T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required for `Wrapper<NoSchema>` to implement `CacheSchema`
  --> tests/ui/fail_missing_bound.rs:6:8
   |
 5 | #[derive(CacheSchema)]
   |          ----------- type parameter would need to implement `CacheSchema`
 6 | struct Wrapper<T> {
   |        ^^^^^^^^^^
   = help: consider manually implementing `CacheSchema` to avoid undesired bounds
note: required by a bound in `schema_fingerprint`
  --> src/lib.rs
   |
   | pub fn schema_fingerprint<T: CacheSchema + ?Sized>() -> SchemaFingerprint {
   |                              ^^^^^^^^^^^ required by this bound in `schema_fingerprint`
