crates/ssa-cache-schema/tests/ui/fail_missing_bound.rs
use ssa_cache_schema::{CacheSchema, schema_fingerprint};

struct NoSchema;

#[derive(CacheSchema)]
struct Wrapper<T> {
    value: T,
}

fn main() {
    let _ = schema_fingerprint::<Wrapper<NoSchema>>();
}
